# glavred

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  ROADMAP.md  WINDOWS_INSTALL.md  compose.remote.yaml  compose.yaml  glavred.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
backend/: __init__.py
backend/app/: __main__.py  main.py  settings.py
backend/tests/: portfolio_test_helpers.py  provider_dossier_test_support.py  rhetorical_plan_test_helpers.py  test_ai_run_api.py  test_ai_run_repository.py  test_alternative_angle_route_budget_repair.py  test_draft_run_api.py  (+116 more)
demo/: README.md
docker/: backend.Dockerfile  frontend.Dockerfile  qa.Dockerfile
scripts/: analyze_draft_run_reliability.py  analyze_radar_signal_extraction.py  analyze_radar_signal_utility.py  architecture-smoke.mjs  audit_draft_run_provider_dossiers.py  audit_draft_run_provider_inputs.py  audit_pairwise_comparison_identity.py  auth-session-smoke.mjs  backend-architecture-audit.py  capture-wiki-screenshots.mjs  check_sqlite_integrity.py  check_workspace_integrity.py  connected-signals-smoke.mjs  design-system-smoke.mjs  generate-draft-run-pipeline-pdf.py  live_radar_signal_extraction_retry_proof.mjs  live_radar_signal_utility_proof.mjs  live_radar_ui_proof.mjs  publish-wiki.mjs  recover_workspace_database.py  remote_docker_runtime.py  visual-smoke.mjs  workspace_utf8_client.py
src/: App.test.tsx  App.tsx  styles.css
ui-design-systems/: COMPONENT-SPECS.md  IMPLEMENTATION-GUIDE.md  START-HERE.md  colors_and_type.css  design-system.md
(+1127 files in other folders)
