[project]
name = "glavred-backend"
version = "0.1.0"
description = "Backend execution layer for Glavred."
requires-python = ">=3.12"
dependencies = [
  "celery[redis]>=5.4,<6.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic-settings>=2.7,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
